Started EA on segment reservations dataset

--- a/Vacasa Similar Unit Recommender.ipynb
+++ b/Vacasa Similar Unit Recommender.ipynb
@@ -5369,8 +5369,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "e1f743d9-bb1f-45c4-a383-2d8f72e19394",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4830 entries, 0 to 4829\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   anonymous_id    4830 non-null   object\n",
+      " 1   reservation_id  4830 non-null   int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 75.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "segment_reservations.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ab27d9-bc62-4ca1-8bdb-849658cfab7e",
+   "metadata": {},
+   "source": [
+    "*segment_reservations* contains 4830 records with 0 missing values. The table can be joined with *segment_page_views* with the *anonymous_id* column. It's also joinable to the *official_reservations* table through the *reservation_id*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9123f6c2-6968-4f06-96e1-6e85655283b6",
    "metadata": {},
    "outputs": [],
    "source": []
